# semmap

./: .gitignore  Cargo.toml  PLAN.md  README.md  SEMMAP.md  antigravity-handoff.md  example.md  slopchop-report.txt  slopchop.toml  spec.md
.cargo/: mutants.toml
.slopchop_apply_backup/1769630530/src/: commands.rs
.slopchop_apply_backup/1769630640/src/: lib.rs
.slopchop_apply_backup/1769630939/src/: lib.rs
.slopchop_apply_backup/1769631102/src/: lib.rs  parser.rs
.slopchop_apply_backup/1769632510/: HANDOVER.md
docs/: HANDOVER.md  claude-latest.md  deprecrate-update.md  generation-research.md  issues-0001.md  lang-parity-plan.md
docs/archived/: visual-structure-research.md
docs/archived/v0.1/: GENERATE_IMPROVEMENT_PROPOSAL.md  HANDOVER.md
docs/proof/: mutation-outcomes.json
src/: commands.rs  deps.rs  doc_extractor.rs  error.rs  exports.rs  formatter.rs  generator.rs  inference.rs  lang_python.rs  lib.rs  main.rs  parse_entries.rs  parser.rs  path_utils.rs  stereotype.rs  swum.rs  types.rs  validator.rs
src/commands/: update_helpers.rs
tests/: analyze_mutation.rs  commands_mutation.rs  deps_mutation.rs  deps_tests.rs  generator_more_tests.rs  generator_tests.rs  parser_tests.rs  path_utils.rs  swum_verbs.rs  update_more_tests.rs  update_tests.rs  validator_tests.rs
