[package]
name = "semmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.5"
walkdir = "2.4"
