[package]
name = "semmap"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
walkdir = "2.4"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"

[dev-dependencies]
tempfile = "3.24.0"
